@@ -1908,6 +1908,7 @@ namespace libtorrent
 				break;
 			}
 
+			m_download_queue.insert(m_download_queue.begin(), b);
 			if (!in_req_queue)
 			{
 				if (t->alerts().should_post<unwanted_block_alert>())
@@ -1919,9 +1920,9 @@ namespace libtorrent
 				(*m_logger) << " *** The block we just got was not in the "
 					"request queue ***\n";
 #endif
+				TORRENT_ASSERT(m_download_queue.front().block == b);
+				m_download_queue.front().not_wanted = true;
 			}
-			m_download_queue.insert(m_download_queue.begin(), b);
-			if (!in_req_queue) m_download_queue.front().not_wanted = true;
 			m_outstanding_bytes += r.length;
 		}
 	}
@@ -2868,6 +2869,23 @@ namespace libtorrent
 		{
 			pending_block block = m_request_queue.front();
 
+			m_request_queue.erase(m_request_queue.begin());
+			if (m_queued_time_critical) --m_queued_time_critical;
+
+			// if we're a seed, we don't have a piece picker
+			// so we don't have to worry about invariants getting
+			// out of sync with it
+			if (t->is_seed()) continue;
+
+			// this can happen if a block times out, is re-requested and
+			// then arrives "unexpectedly"
+			if (t->picker().is_finished(block.block)
+				|| t->picker().is_downloaded(block.block))
+			{
+				t->picker().abort_download(block.block);
+				continue;
+			}
+
 			int block_offset = block.block.block_index * t->block_size();
 			int block_size = (std::min)(t->torrent_file().piece_size(
 				block.block.piece_index) - block_offset, t->block_size());
@@ -2879,21 +2897,13 @@ namespace libtorrent
 			r.start = block_offset;
 			r.length = block_size;
 
-			m_request_queue.erase(m_request_queue.begin());
-			if (m_queued_time_critical) --m_queued_time_critical;
-			if (t->is_seed()) continue;
-			// this can happen if a block times out, is re-requested and
-			// then arrives "unexpectedly"
-			if (t->picker().is_finished(block.block)
-				|| t->picker().is_downloaded(block.block))
-				continue;
-
 			TORRENT_ASSERT(verify_piece(t->to_req(block.block)));
 			m_download_queue.push_back(block);
 			m_outstanding_bytes += block_size;
 #if !defined TORRENT_DISABLE_INVARIANT_CHECKS && defined TORRENT_DEBUG
 			check_invariant();
 #endif
+
 /*
 #ifdef TORRENT_VERBOSE_LOGGING
 			(*m_logger) << time_now_string()
