@@ -1,3 +1,4 @@
+	* fixed synchronization issue between download queue and piece picker
 	* fixed bug in udp tracker scrape response parsing
 	* fixed bug in the disk thread that could get triggered under heavy load
 	* fixed bug in add_piece() that would trigger asserts
